<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ABC_Text</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ABC_Text">ABC_Text</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>

</resources>
