<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ABC_Text"
    android:background="@color/background">

    <TextView android:text="@string/ABC_Text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt01"
        android:textSize="@dimen/h1"
        android:textColor="@color/h1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b"
        android:id="@+id/txt02"
        android:textSize="@dimen/h2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/h2" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/lay01"
        android:orientation="horizontal"
        android:layout_toEndOf="@+id/txt02"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:id="@+id/btnA"
            android:layout_weight="1"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:id="@+id/btnB"
            android:layout_weight="1"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:id="@+id/btnC"
            android:layout_weight="1"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:id="@+id/btnD"
            android:layout_weight="1"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/e"
            android:id="@+id/btnE"
            android:layout_weight="1"
            android:layout_gravity="bottom" />
    </LinearLayout>

</RelativeLayout>
